# memo-cli

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: main.rs
